--- a/src/shared/components/Modal/Modal.css
+++ b/src/shared/components/Modal/Modal.css
@@ -1,5 +1,5 @@
 .modal {
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -9,7 +9,7 @@
   border: 1px solid rgb(250, 250, 250);
   border-radius: 6px;
   z-index: 999;
-  max-width: 80vw;
+  max-width: 60vw;
   width: 100%;
 }
 
